--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-
+    <header>
+    </header>
 
     <nav>
     <ul>
@@ -16,6 +17,12 @@
       <li><a href=https://www.youtube.com/watch?v=EPmFKU38b7Y>Grading</a> </li>
     </ul>
     </nav>
+
+    <main>
+    </main>
+
+    <footer>
+    </footer>
 
 
 
