--- a/page2.html
+++ b/page2.html
@@ -7,7 +7,8 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-
+    <header>
+    </header>
 
     <nav>
     <ul>
@@ -17,9 +18,11 @@
     </ul>
     </nav>
 
+    <main>
+    </main>
 
-
-
+    <footer>
+    </footer>
 
     
     <script src="script.js"></script>
