grid style applied

--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Home</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <header>
+
+<div class="wrapper">
+
+    <logo class = "box logo">
+      This is the logo
+    </logo>
+
+    <header class = "box header">
+      <h1>this is the heading
     </header>
 
-    <nav>
+    <nav class = "box nav">
     <ul>
       <li><a href="index.html">Home</a> </li>
       <li><a href="page2.html">Form</a> </li>
@@ -18,13 +26,15 @@
     </ul>
     </nav>
 
-    <main>
+    <main class = "box main">
+      this is the main
     </main>
 
-    <footer>
+    <footer class = "box footer">
+      this is the footer
     </footer>
 
-
+</div>
 
     
     <script src="script.js"></script>
