Hyperlink style added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="wrapper">
 
     <logo class = "box logo">
-      This is the logo
+      <img src="images/This is the banner.PNG" alt="Logo image">
     </logo>
 
     <header class = "box header">
