--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <div class="wrapper">
 
     <logo class = "box logo">
-      <img src="images/This is the banner.PNG" alt="Logo image">
+      <img src="images/Kojima.png" alt="Logo image" class="banner" >
     </logo>
 
     <header class = "box header">
-      <h1>this is the heading
+       <h1>CPSC2125 Exams</h1>
     </header>
 
     <nav class = "box nav">
@@ -27,11 +27,11 @@
     </nav>
 
     <main class = "box main">
-      this is the main
+      <p>this is the main</p>
     </main>
 
     <footer class = "box footer">
-      this is the footer
+      <p>Michael Farmer <a href = "mailto: farmer_michael1@columbusstate.edu">farmer_michael1@columbusstate.edu</a>&copy;</p>
     </footer>
 
 </div>
