Formatted Design Elements

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     </nav>
 
     <main class = "box main">
-      <p>this is the main</p>
+      <h3>Midterm Instructions</h3>
+      <p>Add semantic tags to your index page: header, nav, main, footer<br>Create the grid layout shown above. Pick background colors of your choice<br>Adapt examples to use the semantic tags instead of div. Review best practices in the Lab 4 video title “Lab 4...With Sound”. You only need ONE div. Make sure that your grid takes up the entire screen. Use percentages and not pixels.<br>No inline or internal styles. All CSS must be in the included CSS file<br>Follow the prompts on the boxes in the example above. Add image, header text, nav and footer info. Please recall that all text still has to be marked up with h1, h2, p, etc.</p>
     </main>
 
     <footer class = "box footer">
