--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Home</title>
+    <title>Form</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -15,7 +15,7 @@
     </logo>
 
     <header class = "box header">
-      <h1>CPSC2125 Exams</h1>
+      <h1>Registration Form</h1>
     </header>
 
     <nav class = "box nav">
